# tui-calculator

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: app.rs  main.rs  types.rs
src/calculator/: calculator.pest  mod.rs
src/ui/: calculator.rs  highlight.rs  mod.rs  modes.rs  programmer.rs
