[package]
name = "tui-calculator"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.27.0"
lazy_static = "1.4.0"
pest = "2.7.5"
pest_derive = "2.7.5"
ratatui = "0.24.0"
tui-big-text = "0.2.1"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
